...
        android:layout_height="48dp"
        android:padding="8dp"
        android:onClick="toggleMainMenu"
        android:background="@drawable/statelist_toolbar_button"/>

    <ImageView
        android:id="@+id/imageview_sheet_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="8dp"
        android:onClick="toggleSheetMenu"
        android:background="@drawable/statelist_toolbar_button"/>

...
